<?xml version="1.0"?>
<package format="2">
  <name>jderobot_color_tuner</name>
  <version>0.0.1</version>
  <description>The jderobot_color_tuner tool package</description>

  <maintainer email="f.perez475@gmail.com">Francisco Perez</maintainer>
  <author email="f.perez475@gmail.com">Francisco Perez</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

